--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -551,6 +551,19 @@ keywords = {Bundle adjustment, Orientation, Oblique images, Multi-head camera, M
 }
 
 
+@article{ALZIATI2024176,
+title = {Ensemble clustering via synchronized relabelling},
+journal = {Pattern Recognition Letters},
+volume = {184},
+pages = {176-182},
+year = {2024},
+doi = {https://doi.org/10.1016/j.patrec.2024.06.026},
+author = {Michele Alziati and Fiore Amarù and Luca Magri and Federica Arrigoni},
+code ={https://github.com/AlziatiM/SynchronizationAndVoting},
+pdf={https://www.sciencedirect.com/science/article/pii/S0167865524001971}
+}
+
+
 @inproceedings{sgaravatti2024multimodal,
   title={A Multimodal Hybrid Late-Cascade Fusion Network for Enhanced 3D Object Detection},
   author={Sgaravatti, Carlo and Basla, Roberto and Pieroni, Riccardo and Corno, Matteo and Savaresi, Sergio M and Magri, Luca and Boracchi, Giacomo},
@@ -574,6 +587,7 @@ booktitle={ECCV 2024 Workshop on Industrial Vision}
 }
 
 @inproceedings{cin2024revisiting,
+	abbr ={eccv},
   title={Revisiting Calibration of Wide-Angle Radially Symmetric Cameras},
   author={Cin, Andrea Porfiri Dal and Azzoni, Francesco and Boracchi, Giacomo and  Magri, Luca},
   booktitle= eccv,
