update talk, update biblio

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -598,3 +598,24 @@ booktitle={ECCV 2024 Workshop on Industrial Vision}
   code ={https://github.com/andreadalcin/RadiallySymmetricCalib},
   year={2024}
 }
+
+@inproceedings{pandey2025outlier,
+  title={Outlier-Robust Multi-Model Fitting on Quantum Annealers},
+  author={Pandey, Saurabh and Magri, Luca and Arrigoni, Federica and Golyanik, Vladislav},
+  booktitle={CVPR 2025, Workshop on Image Matching},
+  pages={2821--2830},
+  year={2025}
+}
+
+
+@article{LEVENI2026112405,
+title = {Preference isolation forest for structure-based anomaly detection},
+journal = {Pattern Recognition},
+volume = {172},
+pages = {112405},
+year = {2026},
+issn = {0031-3203},
+doi = {https://doi.org/10.1016/j.patcog.2025.112405},
+url = {https://www.sciencedirect.com/science/article/pii/S0031320325010660},
+author = {Filippo Leveni and Luca Magri and Cesare Alippi and Giacomo Boracchi},
+}
