--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -604,7 +604,9 @@ booktitle={ECCV 2024 Workshop on Industrial Vision}
   author={Pandey, Saurabh and Magri, Luca and Arrigoni, Federica and Golyanik, Vladislav},
   booktitle={CVPR 2025, Workshop on Image Matching},
   pages={2821--2830},
-  year={2025}
+  year={2025},
+  pdf = {https://openaccess.thecvf.com/content/CVPR2025W/IMW/papers/Pandey_Outlier-Robust_Multi-Model_Fitting_on_Quantum_Annealers_CVPRW_2025_paper.pdf},
+  code = {https://4dqv.mpi-inf.mpg.de/RQMMF/},
 }
 
 
@@ -618,4 +620,41 @@ issn = {0031-3203},
 doi = {https://doi.org/10.1016/j.patcog.2025.112405},
 url = {https://www.sciencedirect.com/science/article/pii/S0031320325010660},
 author = {Filippo Leveni and Luca Magri and Cesare Alippi and Giacomo Boracchi},
+}
+
+@inproceedings{bertogalli2025targetalignalllidar,
+      title={One target to align them all: LiDAR, RGB and event cameras extrinsic calibration for Autonomous Driving}, 
+      author={Andrea Bertogalli and Giacomo Boracchi and Luca Magri},
+      year={2025},
+      booktitle= bmvc,
+      pdf = {https://bmva-archive.org.uk/bmvc/2025/assets/papers/Paper_499/paper.pdf},
+      poster = {https://bmva-archive.org.uk/bmvc/2025/assets/papers/Paper_499/poster.pdf},
+      code = {https://andberto.github.io/One-target-to-align-them-all/#code},
+}
+
+@inproceedings{ferraris2025geometric,
+booktitle = {Smart Tools and Applications in Graphics - Eurographics Italian Chapter Conference},
+editor = {Comino Trinidad, Marc and Mancinelli, Claudio and Maggioli, Filippo and Romanengo, Chiara and Cabiddu, Daniela and Giorgi, Daniela},
+title = {Geometric aware local optimization for robust primitive fitting},
+author = {Ferraris, Andrea and Leveni, Filippo and Baieri, Daniele and Maggioli, Filippo and Melzi, Simone and Magri, Luca},
+year = {2025},
+publisher = {The Eurographics Association},
+ISSN = {2617-4855},
+ISBN = {978-3-03868-296-7},
+DOI = {10.2312/stag.20251321},
+pdf ={https://diglib.eg.org/server/api/core/bitstreams/b1bff3b8-01d4-4d60-935e-6f89f9771bde/content},
+}
+
+
+@article{SGARAVATTI2026113046,
+title = {LCF3D: A robust and real-time late-cascade fusion framework for 3D object detection in autonomous driving},
+journal = {Pattern Recognition},
+volume = {175},
+pages = {113046},
+year = {2026},
+issn = {0031-3203},
+doi = {https://doi.org/10.1016/j.patcog.2026.113046},
+url = {https://www.sciencedirect.com/science/article/pii/S0031320326000099},
+author = {Carlo Sgaravatti and Riccardo Pieroni and Matteo Corno and Sergio M. Savaresi and Luca Magri and Giacomo Boracchi},
+code = {https://github.com/CarloSgaravatti/LCF3D},
 }
